--- a/bluerun/trading/templates/trading/dashboard.html
+++ b/bluerun/trading/templates/trading/dashboard.html
@@ -9,39 +9,19 @@
       <li data-target="#main-slide" data-slide-to="0" class="active"></li>
       
     </ol>
-    <!--/ Indicators end-->
-		    <div class="carousel-inner">
-      <div class="item active">
-      <div class="col-md-12 ">
-      <img src="{% static 'margo/images/slider/bg1.jpg' %}" alt="slider" id="dashboard">
-		<div class="slider-content">
-		<h2 class="animated2">
-              <span>Welcome to <strong>Bluerun</strong></span>
-            </h2>
-			</div>
-            <h2 class="dash">
-              <span>Hello {{ user.username }}</span>
-			  
-            </h2>  
-			</div>
-          </div>
-		 </div>
-       
-	
-     
-	 <!--
-<div class="page-banner" style="padding:40px 0;">
-	<div class="container" id="dashboard">
+	<div class="page-banner" style="padding:40px 0;">
+	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<h2>Dashboard</h2>
-				<p></p>
+				<h2>Dashboard</h2></br></br>
+				<h4 class="dash">Hello {{ user.username }}</h4>
 			</div>
 		</div>
 	</div>
-</div>-->
+</div>
+    <!--/ Indicators end-->
 
-<div class = "container-fluid" >
+       <div class = "container-fluid" >
 	<ul class="nav nav-tabs nav-justified" role="tablist">
 		<li role="presentation" class="active"><a href="#cashintra" aria-controls="cashintra" role="tab" data-toggle="tab">Cash intra</a></li>
 		<li role="presentation"><a href="#cashpositional" aria-controls="cashpositional" role="tab" data-toggle="tab">Cash positional</a></li>
@@ -79,12 +59,16 @@
 				</div>
 				
 				<div class="panel-body pan-body-custom">
-			</br>
-					<strong class="pbody">Date:</strong> {{ call.created_on }}<br>
-					<strong class="pbody">Entry Price: </strong>{{ call.entry_price }}<br>
-					<strong class="pbody">Target: </strong>{{ call.target }}<br>
-					<strong class="pbody">Stop Loss: </strong>{{ call.stop_loss }}<br>
-					<strong class="pbody">Call Achieved: </strong>{{call.achived}}</br> </strong>
+			</br></br><div class="col-md-3 col-sm-3 ">
+					<strong class="pbody">Date:</strong> {{ call.created_on }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Entry Price: </strong>{{ call.entry_price }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Target: </strong>{{ call.target }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Stop Loss: </strong>{{ call.stop_loss }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Call Achieved: </strong>{{call.achived}}</div> </strong>
 					
 				</div>
 			</div>
@@ -119,12 +103,17 @@
 				</div>
 				
 				<div class="panel-body pan-body-custom">
-				</br>
-					<strong class="pbody">Date: </strong>{{ call.created_on }}<br>
-					<strong class="pbody">Entry Price: </strong>{{ call.entry_price }}<br>
-					<strong class="pbody">Target: </strong>{{ call.target }}<br>
-					<strong class="pbody">Stop Loss: </strong>{{ call.stop_loss }}<br>
-					<strong class="pbody">Call Achieved: </strong>{{call.achived}}
+			</br></br><div class="col-md-3 col-sm-3 ">
+					<strong class="pbody">Date:</strong> {{ call.created_on }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Entry Price: </strong>{{ call.entry_price }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Target: </strong>{{ call.target }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Stop Loss: </strong>{{ call.stop_loss }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Call Achieved: </strong>{{call.achived}}</div> </strong>
+					
 				</div>
 			</div>
 			{% endfor %}
@@ -158,13 +147,17 @@
 					</div>
 				
 				<div class="panel-body pan-body-custom">
-				
-				</br>
-					<strong class="pbody">Date: </strong>{{ call.created_on }}<br>
-					<strong class="pbody">Entry Price: </strong>{{ call.entry_price }}<br>
-					<strong class="pbody">Target: </strong>{{ call.target }}<br>
-					<strong class="pbody">Stop Loss: </strong>{{ call.stop_loss }}<br>
-					<strong class="pbody">Call Achieved: </strong>{{call.achived}}
+			</br></br><div class="col-md-3 col-sm-3 ">
+					<strong class="pbody">Date:</strong> {{ call.created_on }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Entry Price: </strong>{{ call.entry_price }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Target: </strong>{{ call.target }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Stop Loss: </strong>{{ call.stop_loss }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Call Achieved: </strong>{{call.achived}}</div> </strong>
+					
 				</div>
 			</div>
 			{% endfor %}
@@ -198,14 +191,19 @@
 					</div>
 				
 				<div class="panel-body pan-body-custom">
-				</br>
-					<strong class="pbody">Date: </strong>{{ call.created_on }}<br>
-					<strong class="pbody">Entry Price: </strong>{{ call.entry_price }}<br>
-					<strong class="pbody">Target: </strong>{{ call.target }}<br>
-					<strong class="pbody">Stop Loss: </strong>{{ call.stop_loss }}<br>
-					<strong class="pbody">Call Achieved: </strong>{{call.achived}}
+			</br></br><div class="col-md-3 col-sm-3 ">
+					<strong class="pbody">Date:</strong> {{ call.created_on }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Entry Price: </strong>{{ call.entry_price }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Target: </strong>{{ call.target }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Stop Loss: </strong>{{ call.stop_loss }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Call Achieved: </strong>{{call.achived}}</div> </strong>
+					
 				</div>
-				</div>
+			</div>
 			{% endfor %}
 			{% elif nifty_future == None %}
 			<h1>No calls in this section</h1>
@@ -237,12 +235,17 @@
 				</div>
 				
 				<div class="panel-body pan-body-custom">
-				</br>
-					<strong class="pbody">Date: </strong>{{ call.created_on }}<br>
-					<strong class="pbody">Entry Price:</strong> {{ call.entry_price }}<br>
-					<strong class="pbody">Target: </strong>{{ call.target }}<br>
-					<strong class="pbody">Stop Loss:</strong> {{ call.stop_loss }}<br>
-					<strong class="pbody">Call Achieved:</strong> {{call.achived}}
+			</br></br><div class="col-md-3 col-sm-3 ">
+					<strong class="pbody">Date:</strong> {{ call.created_on }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Entry Price: </strong>{{ call.entry_price }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Target: </strong>{{ call.target }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Stop Loss: </strong>{{ call.stop_loss }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Call Achieved: </strong>{{call.achived}}</div> </strong>
+					
 				</div>
 			</div>
 			{% endfor %}
@@ -276,12 +279,17 @@
 				</div>
 				
 				<div class="panel-body pan-body-custom">
-				</br>
-					<strong class="pbody">Date:</strong> {{ call.created_on }}<br>
-					<strong class="pbody">Entry Price:</strong> {{ call.entry_price }}<br>
-					<strong class="pbody">Target:</strong> {{ call.target }}<br>
-					<strong class="pbody">Stop Loss:</strong> {{ call.stop_loss }}<br>
-					<strong class="pbody">Call Achieved:</strong> {{call.achived}}
+			</br></br><div class="col-md-3 col-sm-3 ">
+					<strong class="pbody">Date:</strong> {{ call.created_on }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Entry Price: </strong>{{ call.entry_price }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Target: </strong>{{ call.target }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Stop Loss: </strong>{{ call.stop_loss }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Call Achieved: </strong>{{call.achived}}</div> </strong>
+					
 				</div>
 			</div>
 			{% endfor %}
@@ -315,12 +323,17 @@
 				</div>
 				
 				<div class="panel-body pan-body-custom">
-				</br>
-					<strong class="pbody">Date:</strong> {{ call.created_on }}<br>
-					<strong class="pbody">Entry Price:</strong> {{ call.entry_price }}<br>
-					<strong class="pbody">Target:</strong> {{ call.target }}<br>
-					<strong class="pbody">Stop Loss:</strong> {{ call.stop_loss }}<br>
-					<strong class="pbody">Call Achieved:</strong> {{call.achived}}
+			</br></br><div class="col-md-3 col-sm-3 ">
+					<strong class="pbody">Date:</strong> {{ call.created_on }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Entry Price: </strong>{{ call.entry_price }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Target: </strong>{{ call.target }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Stop Loss: </strong>{{ call.stop_loss }}</div>
+					<div class="col-md-2 col-sm-2">
+					<strong class="pbody">Call Achieved: </strong>{{call.achived}}</div> </strong>
+					
 				</div>
 			</div>
 			{% endfor %}
